# chess-driller

./: .gitignore  Cargo.toml  README.md  games.pgn  index.html  package-lock.json
design/: README.md
prep/black/: lichess_study_the-queens-gambit_chapter-2--queens-gambit-declined-variation-1_by_Yonushke_2022.12.31.pgn
prep/white/: lichess_study_vienna-repertoire_vienna-gambit-main-line_by_anomality_2021.02.18.pgn
src/: App.jsx  config.rs  db.rs  events.rs  game.rs  gui.rs  lib.rs  main.rs  render.rs
src-tauri/: .taurignore  Cargo.toml
src-tauri/prep/black/: lichess_study_caro-kann_caro-kann-advance-variation-1_by_Hairy_poppins_2020.12.11.pgn  lichess_study_the-queens-gambit_chapter-3--queens-gambit-declined-variation-2_by_Yonushke_2023.01.01.pgn
src-tauri/src/: db.rs  lib.rs  main.rs
src/clients/: chess_com.rs  mod.rs
src/gui/: board.rs
tests/resources/: games.pgn
