[package]
name = "chess-driller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bevy = "0.9.1"
chess = "3.2.0"
radix_trie = "0.2.1"
sdl2 = { version = "0.35.2", features = ["image"] }
