[package]
name = "chess-driller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chess = "3.2.0"
dirs = "5.0.1"
fastrand = "2.0.0"
petgraph = "0.6.3"
pgn-reader = "0.25.0"
radix_trie = "0.2.1"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
sdl2 = { version = "0.35.2", features = ["image"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
shakmaty = "0.26.0"
walkdir = "2.3.3"
